chore(*): generate type def

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "main": "dist/index.js",
+	"module": "dist/src/index.d.ts",
   "scripts": {
     "try": "webpack-dev-server --config ./webpack-try.config.js",
     "prebuild": "rimraf ./dist",
