--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digimed/ngcrop",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.1",
   "description": "",
   "main": "dist/index.js",
 	"module": "dist/src/index.d.ts",
