--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "typescript": "^2.0.6",
     "webpack": "2.1.0-beta.25",
     "webpack-dev-server": "2.1.0-beta.10",
-    "webpack-merge": "^0.15.0"
+    "webpack-merge": "^0.15.0",
+    "tslint": "^3.15.1"
   },
   "dependencies": {
     "@angular/common": "^2.1.2",
@@ -55,9 +56,7 @@
     "angular2-modal": "^2.0.1",
     "core-js": "^2.4.1",
     "cropperjs": "^0.8.1",
-    "pug-html-loader": "1.0.7",
     "rxjs": "5.0.0-beta.12",
-    "tslint": "^3.15.1",
     "zone.js": "^0.6.26"
   }
 }
