--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,25 +7,16 @@
 		"sourceMap": true,
 		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-		"noEmitHelpers": false,
+		"noEmitHelpers": true,
 		"noEmitOnError": false,
 		"allowSyntheticDefaultImports": true,
 		"strictNullChecks": false,
 		"lib": ["es6", "dom"],
-		"baseUrl": "./src" ,
-		"declaration": true,
-		"outDir": "dist",
-		"mapRoot": "./src",
-		"stripInternal": true,
-    "inlineSources": true,
-		"skipLibCheck": true
-	},
-	"angularCompilerOptions": {
-    "genDir": "./dist"
-  },
-	"awesomeTypescriptLoaderOptions": {
-		"useWebpackText": true,
-		"forkChecker": true
+		"baseUrl": "./src",
+		"types": [
+			"node"
+		],
+		"declaration": true
 	},
 	"exclude": [
 		"node_modules",
