--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dgm-bs3-ngcrop",
   "version": "0.0.1-alpha.3",
-  "description": "",
+  "description": "Angular2 component wrapper for CropperJS",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "typings": "dist/index.d.ts",
